# esp32-waveshare-epd-idf

./: CMakeLists.txt  README.md  Version_CN.txt  Version_EN.txt
examples/epd13in3b/: epd13in3b.ino
examples/epd13in3k/: epd13in3k.ino
examples/epd1in54-demo/: epd1in54-demo.ino
examples/epd1in54_V2-demo/: epd1in54_V2-demo.ino
examples/epd2in13-demo/: epd2in13-demo.ino
examples/epd2in13_V2-demo/: epd2in13_V2-demo.ino
examples/epd2in13_V3-demo/: epd2in13_V3-demo.ino
examples/epd2in13_V4-demo/: epd2in13_V4-demo.ino
examples/epd2in13d-demo/: epd2in13d-demo.ino
examples/epd2in66-demo/: epd2in66-demo.ino
examples/epd2in7_V2-demo/: epd2in7_V2-demo.ino
examples/epd2in9-demo/: epd2in9-demo.ino
examples/epd2in9_V2-demo/: epd2in9_V2-demo.ino
examples/epd2in9b_V4-demo/: epd2in9b_V4-demo.ino
examples/epd2in9d-demo/: epd2in9d-demo.ino
examples/epd3in7-demo/: epd3in7-demo.ino
examples/epd4in2-demo/: epd4in2-demo.ino
examples/epd4in26-demo/: epd4in26-demo.ino
examples/epd4in2_V2-demo/: epd4in2_V2-demo.ino
examples/epd7in5_V2-demo/: epd7in5_V2-demo.ino
examples/epd7in5_V2_old-demo/: epd7in5_V2_old-demo.ino
examples/epd7in5b_V2-demo/: epd7in5b_V2-demo.ino
extras/Loader_esp32bt/: srvr.h
extras/Loader_esp32wf/: epd.h  scripts.h  srvr.h
src/: DEV_Config.h  GUI_Paint.cpp  GxEPD_IO.h  NeverUseArduino.h  font12.cpp  font12CN.cpp  font20.cpp  font24.cpp  font24CN.cpp  font8.cpp
src/Fonts/: font12CJK.cpp  font12CJK_B.cpp  font16.cpp  fonts.h  music_fonts_cjk.txt  stc_isp_char_config.ini
src/GUI/: GUI_Paint.cpp  GUI_Paint.h
src/utility/: Debug.h  (+3 more)
